ApplicationDeveloper/20_Ingress_Networking/Examples/ingress-wear-watch-domain.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-wear
spec:
 rules:
   - host: wear.my-online-store.com 
     http:
       paths:
           - backend:
               serviceName: wear-service
               servicePort: 80

   - host: watch.my-online-store.com 
     http:
       paths:
         - backend:
             serviceName: watch-service
             servicePort: 80
