ApplicationDeveloper/20_Ingress_Networking/Examples/ingress-wordpress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-wordpress
  annotations:
    # nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
 rules:
   - http:
       paths:
          - path: /wordpress
            backend:
              serviceName: wordpress
              servicePort: 80
          - path: /wp-admin
            backend:
              serviceName: wordpress
              servicePort: 80
